<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar_1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mBlue"
        android:elevation="4dp"
        app:logo="@drawable/icomch"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_1"
        app:layout_constraintBottom_toTopOf="@+id/btnInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:textColor="@color/orangeMC"
        android:gravity="center_vertical"
        android:textSize="40sp"
        android:text="@string/welcome"
        android:fontFamily="@font/roboto_bold"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_card_height"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:layout_marginVertical="@dimen/common_margin"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_brayner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/txtEvents"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgEvents"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ico_infot"
                    android:contentDescription="@string/description_img_photo"
                    app:layout_constraintBottom_toTopOf="@id/txtEvents"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtEvents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/info"
                android:paddingBottom="@dimen/common_margin"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/mBlue"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_card_height"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:layout_marginVertical="@dimen/common_margin"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnContact">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_brayner">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/txtWebsite"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/imgWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:src="@drawable/ico_casita43"
                    android:contentDescription="@string/description_img_photo"
                    app:layout_constraintBottom_toTopOf="@id/txtWebsite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <TextView
                android:id="@+id/txtWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/mBlue"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/yourStay"
                android:textSize="@dimen/common_text_size"
                android:paddingBottom="@dimen/common_margin"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnContact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_card_height"
        android:layout_marginVertical="@dimen/common_margin"
        android:layout_marginHorizontal="@dimen/common_margin"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnServices">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_brayner">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/txtInfo"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/imgInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ico_website"
                    android:contentDescription="@string/description_img_photo"
                    app:layout_constraintBottom_toTopOf="@id/txtInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/mBlue"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/about"
                android:textSize="@dimen/common_text_size"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:paddingBottom="@dimen/common_margin"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_menu_lang"
        android:backgroundTint="@color/orangeMC"
        android:contentDescription="@string/select_language"/>
</androidx.constraintlayout.widget.ConstraintLayout>